tests/NormalTests/paczka1/fuzzy1/28457916.err
Error in line 2: Loq A976 88,0
Error in line 6: hWsBMDVI8 A435 76,1
Error in line 18: 3IiIyGEbpK A566 26,0
Error in line 21: 3IiIyGEbpK A976 15,5
Error in line 25: S268 A566 91,3
Error in line 23: hWsBMDVI8 S268 39,7
